--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span>=</span>
             <p class="answer-message">Enter Answer:</p>
             <input type="number" id="answer-box">
-            <button data-type="submit" class="btn btn--grey">Submit Answer</button>
+            <button data-type="submit" class="btn btn--gray">Submit Answer</button>
         </div>
 
     </div>
